--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -89,6 +89,11 @@ to maintain and improve quality.</p>
 
 <dl>
 
+<dt><b>August 8, 2003</b></dt>
+<dd>
+<a href="gcc-3.3/">GCC 3.3.1</a> has been released.
+</dd>
+
 <dt><b>June 26, 2003</b></dt>
 <dd>
 Ben Elliston of Wasabi Systems, Inc. has converted the existing ARM
