--- a/htdocs/gcc-3.3/index.html
+++ b/htdocs/gcc-3.3/index.html
@@ -6,6 +6,18 @@
 
 <body>
 
+<h1>GCC 3.3.1</h1>
+
+<p>August 8, 2003</p>
+
+<p>The <a href="http://www.gnu.org">GNU project</a> and the GCC
+developers are pleased to announce the release of GCC 3.3.1.</p>
+
+<p>GCC 3.3.1 includes numerous <a href="changes.html">new features,
+improvements, bug fixes, and other changes</a>, thanks to an <a
+href="http://gcc.gnu.org/onlinedocs/gcc/Contributors.html">amazing
+group of volunteers</a>.</p>
+
 <h1>GCC 3.3</h1>
 
 <p>May 14, 2003</p>
@@ -24,6 +36,10 @@ variety of targets and test packages.</p>
 <h2>Release History</h2>
 
 <dl>
+<dt>GCC 3.3.1</dt>
+<dd><a name="3.3.1">August 8, 2003</a>
+    (<a href="changes.html">changes</a>)
+</dd>
 <dt>GCC 3.3</dt>
 <dd><a name="3.3">May 14, 2003</a>
     (<a href="changes.html">changes</a>)
