--- a/htdocs/gcc-3.2/buildstat.html
+++ b/htdocs/gcc-3.2/buildstat.html
@@ -163,6 +163,14 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
+<td>hppa1.1-hp-hpux10.20</td>
+<td>HP-UX assembler</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2003-08/msg00054.html">3.2.3</a>
+</td>
+</tr>
+
+<tr>
 <td>hppa1.1-hp-hpux11.11</td>
 <td>&nbsp;</td>
 <td>Successful:
@@ -367,6 +375,13 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
+<td>i586-pc-linux-gnu (K6-II)</td>
+<td>Slackware 9.0, glibc 2.3.1, kernel 2.4.20</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2003-08/msg00073.html">3.2.3</a></td>
+</tr>
+
+<tr>
 <td>i586-pc-linux-gnu</td>
 <td>SuSE 6.3, glibc 2.1.2, kernel 2.2.13, recent binutils</td>
 <td>Successful (C, C++, Java):
@@ -555,6 +570,13 @@ Installing GCC: Final Installation</a>.</p>
 <td>Mandrake 9.0, glibc 2.2.5, kernel 2.4.19</td>
 <td>Successful:
 <a href="http://gcc.gnu.org/ml/gcc/2003-02/msg01382.html">3.2.2</a></td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
+<td>Red Hat 5.1, glibc 2.1.3, kernel 2.4.20, binutils 2.11.2</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2003-08/msg00063.html">3.2.3</a></td>
 </tr>
 
 <tr>
