* libgcj-classpath-compare.html: Rebuilt.

--- a/htdocs/java/libgcj-classpath-compare.html
+++ b/htdocs/java/libgcj-classpath-compare.html
@@ -8,7 +8,7 @@
 <p>This page compares the "current" cvs libgcj against the "current"
 cvs Classpath.  It was generated using the <code>gen-classpath-compare</code>
 script (available in gcc cvs repository in <code>wwwdocs/bin/</code>) on
-2003-08-07.
+2003-08-10.
 This table intentionally omits certain classes which are not of
 interest.  If the third column shows a "Diff" link, then that means
 the script believes that the class has been merged, but a difference
@@ -42,7 +42,6 @@ differences are currently required.</p>
 <tr> <td>java.io.InputStreamReader</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.io.InputStreamReader.diff">Diff</a></td> </tr>
 <tr> <td>java.io.ObjectInputStream</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.io.ObjectInputStream.diff">Diff</a></td> </tr>
 <tr> <td>java.io.OutputStreamWriter</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.io.OutputStreamWriter.diff">Diff</a></td> </tr>
-<tr> <td>java.io.PrintStream</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.io.PrintStream.diff">Diff</a></td> </tr>
 <tr> <td>java.io.VMObjectStreamClass</td> <td>Yes</td> <td>VM-specific</td> <td>&nbsp;</td> </tr>
 <tr> <td>java.lang.Character</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.lang.Character.diff">Diff</a></td> </tr>
 <tr> <td>java.lang.Class</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
@@ -50,6 +49,7 @@ differences are currently required.</p>
 <tr> <td>java.lang.Double</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.lang.Double.diff">Diff</a></td> </tr>
 <tr> <td>java.lang.EcosProcess</td> <td>Yes</td> <td>GCJ-specific</td> <td>&nbsp;</td> </tr>
 <tr> <td>java.lang.Float</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.lang.Float.diff">Diff</a></td> </tr>
+<tr> <td>java.lang.InheritableThreadLocal</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.lang.InheritableThreadLocal.diff">Diff</a></td> </tr>
 <tr> <td>java.lang.Math</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.lang.Math.diff">Diff</a></td> </tr>
 <tr> <td>java.lang.Object</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>java.lang.PosixProcess</td> <td>Yes</td> <td>GCJ-specific</td> <td>&nbsp;</td> </tr>
@@ -61,6 +61,7 @@ differences are currently required.</p>
 <tr> <td>java.lang.System</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.lang.System.diff">Diff</a></td> </tr>
 <tr> <td>java.lang.Thread</td> <td>Yes</td> <td>VM-specific</td> <td>&nbsp;</td> </tr>
 <tr> <td>java.lang.ThreadGroup</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.lang.ThreadGroup.diff">Diff</a></td> </tr>
+<tr> <td>java.lang.ThreadLocal</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.lang.ThreadLocal.diff">Diff</a></td> </tr>
 <tr> <td>java.lang.VMClassLoader</td> <td>Yes</td> <td>VM-specific</td> <td>&nbsp;</td> </tr>
 <tr> <td>java.lang.VMSecurityManager</td> <td>Yes</td> <td>VM-specific</td> <td>&nbsp;</td> </tr>
 <tr> <td>java.lang.VMThrowable</td> <td>Yes</td> <td>VM-specific</td> <td>&nbsp;</td> </tr>
