Note GCC 3.3.1 in the releases section.  Add a link to Java news in the news section.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -48,7 +48,7 @@ to maintain and improve quality.</p>
 -->
 
 <dt><strong>Current release series:</strong>
-  <a href="gcc-3.3/">GCC 3.3</a> (released 2003-05-14)
+  <a href="gcc-3.3/">GCC 3.3.1</a> (released 2003-08-08)
 </dt><dd>
   The branch is open for regression fixes only.
 </dd>
@@ -129,7 +129,8 @@ which took place May 25-27, 2003.
 
 <a href="news.html">Older news and announcements...</a>
 <br />
-<a href="http://gcc.gnu.org/onlinedocs/g77/News.html">Fortran news</a>
+<a href="java/index.html#news">GCJ news</a>
+| <a href="http://gcc.gnu.org/onlinedocs/g77/News.html">Fortran news</a>
 
 <include searchbox.ihtml>
 
