--- a/htdocs/gcc-3.3/index.html
+++ b/htdocs/gcc-3.3/index.html
@@ -1,12 +1,12 @@
 <html>
 
 <head>
-<title>GCC 3.3</title>
+<title>GCC 3.3 Release Series</title>
 </head>
 
 <body>
 
-<h1>GCC 3.3.1</h1>
+<h1>GCC 3.3 Release Series</h1>
 
 <p>August 8, 2003</p>
 
@@ -14,18 +14,6 @@
 developers are pleased to announce the release of GCC 3.3.1.</p>
 
 <p>GCC 3.3.1 includes numerous <a href="changes.html">new features,
-improvements, bug fixes, and other changes</a>, thanks to an <a
-href="http://gcc.gnu.org/onlinedocs/gcc/Contributors.html">amazing
-group of volunteers</a>.</p>
-
-<h1>GCC 3.3</h1>
-
-<p>May 14, 2003</p>
-
-<p>The <a href="http://www.gnu.org">GNU project</a> and the GCC
-developers are pleased to announce the release of GCC 3.3.</p>
-
-<p>GCC 3.3 includes numerous <a href="changes.html">new features,
 improvements, bug fixes, and other changes</a>, thanks to an <a
 href="http://gcc.gnu.org/onlinedocs/gcc/Contributors.html">amazing
 group of volunteers</a>.</p>
