Add a link to the GCC Code-Size Benchmark > Environment (CSiBE), as recommended in mail from Arpad Beszedes <beszedes@cc.u-szeged.hu>.

--- a/htdocs/benchmarks/index.html
+++ b/htdocs/benchmarks/index.html
@@ -44,6 +44,14 @@ href="http://www.suse.de/~aj/SPEC/">http://www.suse.de/~aj/SPEC/</a>.
 <p>SPEC 2000 tests on a Pentium 4 system are available at <a href="http://people.redhat.com/dnovillo/spec2000/">http://people.redhat.com/dnovillo/spec2000/</a>.
 </p>
 
+<h2>Code Size Benchmarks</h2>
+
+<p>
+Statistics about GCC code size for several targets are available from the
+<a href="http://sed.inf.u-szeged.hu/csibe/">GCC Code-Size Benchmark
+Environment (CSiBE)</a>, along with the testbed and measurement scripts.
+</p>
+
 <h2>Related benchmarks</h2>
 
 <p>
