Fix the "African or European?" link and explain the change.

--- a/htdocs/libstdc++/index.html
+++ b/htdocs/libstdc++/index.html
@@ -23,13 +23,13 @@
 
 <h2>What... is the airspeed velocity of an unladen swallow?</h2>
 
-<p><a href="http://www.stone-dead.asn.au/movies/holy-grail/scene-23.html">African or European?</a></p>
+<p><a href="http://systemimager.sourceforge.net/pub/swallowscenes.html">African or European?</a></p>
 <!-- Anyone who hasn't seen Holy Grail shouldn't be programming... how can you
      understand procedural logic if you haven't seen the witch-burning scene?
-     (Replace 'scene-23' with 'scene-05' for the transcript of that scene.)
-     NOTA BENE:  This link breaks often, usually 'scene' and 'grail' get flip-
-     flopped a lot.  If it breaks, try the appropriate flip-flop, and if that
-     works send an email to pedwards/pme (check the archives for an address).
+     (The link at http://www.stone-dead.asn.au/movies/holy-grail/scene-23.html
+     finally gave out once too often.  This one is a more complete transcript
+     but doesn't have the entire movie, so we can no longer provide a link to
+     the witch-burning scene; you'll just need to watch the movie.)
 -->
 
 <hr />
