* cvs.html: Add tree-ssa-cfg branch.

--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -185,6 +185,13 @@ particular releases or snapshots or the latest snapshot.  </p>
   <dd>Work on implementing SSA analysis and optimization for trees 
   is done in this branch.</dd>
 
+  <dt>tree-ssa-cfg-branch</dt>
+  <dd>A subbranch of <a
+  href="projects/tree-ssa/">tree-ssa-20020619-branch</a> with purpose
+  of changing the current tree of statements + cfg code representation
+  to the one based only on cfg.  Later optimizations that could benefit
+  from a simpler cfg manipulation may be developed here.</dd>
+
   <dt>faster-compiler-branch</dt> 
   <dd>This branch is for work aimed primarily
   at making GCC itself run faster.  No checkin policy has yet been
