--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -187,7 +187,7 @@ particular releases or snapshots or the latest snapshot.  </p>
 
   <dt>tree-ssa-cfg-branch</dt>
   <dd>A subbranch of <a
-  href="projects/tree-ssa/">tree-ssa-20020619-branch</a> with purpose
+  href="projects/tree-ssa/">tree-ssa-20020619-branch</a> with the purpose
   of changing the current tree of statements + cfg code representation
   to the one based only on cfg.  Later optimizations that could benefit
   from a simpler cfg manipulation may be developed here.</dd>
