Update note on important targets, getting rid of the footnote on the way.

--- a/htdocs/develop.html
+++ b/htdocs/develop.html
@@ -145,8 +145,7 @@ so it is unlikely that many conflicts will occur.</p>
 <h3>Patch Reversion</h3>
 
 <p>If a patch is committed which introduces a regression on any target
-which the Steering Committee considers to be important <a href="#1">[1]</a>,
-and if:</p>
+which the Steering Committee considers to be important and if:</p>
 
 <ul>
 <li>the problem is reported to the original poster;</li>
@@ -157,6 +156,9 @@ and if:</p>
 </ul>
 
 <p>then they may revert the patch.</p>
+
+<p>(The list of important targets will be revised at the beginning of each
+release cycle, if necessary, and is part of the release criteria.)</p>
 
 <p>After the patch has been reverted, the poster may appeal the
 decision to the Steering Committee.</p>
@@ -300,12 +302,6 @@ stages of development, branch points, and releases:</p>
        :                                         :
        v                                          v
 </pre>
-
-<hr />
-
-<p id="one">[1] The Steering Committee is planning to prepare a list of such
-targets.  The list will be revised at the beginning of each release
-cycle, if necessary.</p>
 
 </body>
 </html>
