* tree-ssa/index.html: Mention that the Objective-C uses 	the C front end helpers and that Objective-C has a genericize pass.

--- a/htdocs/projects/tree-ssa/index.html
+++ b/htdocs/projects/tree-ssa/index.html
@@ -188,7 +188,7 @@ lists, starting with <a href="http://gcc.gnu.org/ml/gcc/2002-01/msg00082.html">h
 
 <p>The conversion from GENERIC into GIMPLE trees is implemented in
 <code>gimplify.c</code>.  Additionally, each front end may have a set of
-language-specific helpers.  For instance, the C front end contains helper
+language-specific helpers.  For instance, the C/Objective-C front ends contain the helper
 functions in <code>c-simplify.c</code>, the C++ front end has its own in
 <code>cp/cp-simplify.c</code>.  Predicates to determine whether a tree is
 in GIMPLE form are defined in <code>tree-simple.[ch]</code>.</p>
@@ -311,7 +311,7 @@ different passes are welcome.</p>
     we will probably find some more deficiencies that need to be
     addressed.</dd>
 <dt><em>Add parse tree to GENERIC translation passes to front ends</em></dt>
-<dd>From the front ends that generate function-as-trees, only the C
+<dd>From the front ends that generate function-as-trees, only the C, Objective-C
     and C++ front ends have a genericize pass.  
     <a href="mailto:jsturm@one-point.com">Jeff Sturm</a> and 
     <a href="mailto:aph@redhat.com">Andrew Haley</a> are working on
