Fix html errors

--- a/htdocs/gcc-3.4/changes.html
+++ b/htdocs/gcc-3.4/changes.html
@@ -83,7 +83,7 @@
         in the old parser.</li>
 
     <li>You must now use the <code>typename</code> and
-	<code>template<code> keywords to disambiguate dependent names,
+	<code>template</code> keywords to disambiguate dependent names,
 	as required by the C++ standard.</li>
 
     <li>In a template definition, unqualified names will no longer
@@ -110,7 +110,7 @@
 	<code>this-&gt;</code>. Here is the corrected definition of
 	<code>C&lt;T&gt;::g</code>,</p>
 	<pre>
-	template &lt;typename T&gt; void C<T>::g ()
+	template &lt;typename T&gt; void C&lt;T&gt;::g ()
 	{
 	  this->m = 0;
 	  this->f ();
@@ -165,7 +165,7 @@
 	<pre>
 	template &lt;typename T&gt;
 	class C {
-	  friend void f<>(C&amp;);
+	  friend void f&lt;&gt; (C&amp;);
 	};</pre>
 	<p>is rejected. You must first declare <code>f</code> as a
 	template,</p>
