Bootstrap and test results for 3.3.1:
  alphaev68-dec-osf5.1 (Tru64 5.1A)

Bootstrap for 3.3.1:

  alphaev67-dec-osf5.1 (Tru64 5.1)

Test results for 3.3.1:

  i686-pc-linux-gnu

--- a/htdocs/gcc-3.3/buildstat.html
+++ b/htdocs/gcc-3.3/buildstat.html
@@ -87,6 +87,24 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
+<td>alphaev67-dec-osf5.1</td>
+<td>Tru64 5.1</td>
+<td>Bootstrap (C, C++, F77, Obj-C):
+<a href="http://gcc.gnu.org/ml/gcc/2003-08/msg01161.html">3.3.1</a>
+</td>
+</tr>
+
+<tr>
+<td>alphaev68-dec-osf5.1</td>
+<td>Tru64 5.1A</td>
+<td>Bootstrap:
+<a href="http://gcc.gnu.org/ml/gcc/2003-08/msg00983.html">3.3.1</a>
+<br />Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-08/msg00854.html">3.3.1</a>
+</td>
+</tr>
+
+<tr>
 <td>arm-unknown-linux-gnu</td>
 <td>Debian</td>
 <td>Test results:
@@ -246,6 +264,7 @@ Installing GCC: Final Installation</a>.</p>
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00948.html">3.3</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00945.html">3.3</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00940.html">3.3</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-08/msg00800.html">3.3.1</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-08/msg00613.html">3.3.1</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-08/msg00502.html">3.3.1</a>
 </td>
