--- a/htdocs/projects/cxx-reflection/index.html
+++ b/htdocs/projects/cxx-reflection/index.html
@@ -28,10 +28,9 @@ documentation</a>.</p>
 <p>When posting to the development lists, please mark messages and patches with
 <code>[cxx-reflection]</code> in the subject.  As this is a branch, and not
 the mainline, the usual maintainer rules do not apply.  This branch is
-maintained by <a href="mailto:gdosreis@sophia.inria.fr">Gabriel Dos Reis
-&lt;gdosreis@sophia.inria.fr&gt;</a>.  Approval from the usual
-maintainers will be needed when submitting patches from the branch
-onto the mainline.</p> 
+maintained by <a href="mailto:gdr@acm.org">Gabriel Dos Reis</a>. 
+Approval from the usual maintainers will be needed when submitting
+patches from the branch onto the mainline.</p> 
 
 <h3>Branch stability</h3>
 
