--- a/htdocs/java/index.html
+++ b/htdocs/java/index.html
@@ -66,7 +66,7 @@ For <code>javax.crypto</code> support, we recommend the use of
 <br />
 <br />
 
-<h2>GCJ News</h2>
+<h2><a name="news">GCJ News</a></h2>
 
 <table>
 
@@ -76,8 +76,8 @@ For <code>javax.crypto</code> support, we recommend the use of
 <b>August 4, 2003</b>
 </td><td>
 Gary Benson from Red Hat has released 
-<a href="http://people.redhat.com/gbenson/naoko">Naoko</a>: a subset 
-of the <a href="http://sources.redhat.com/rhug">rhug</a> packages 
+<a href="http://people.redhat.com/gbenson/naoko/">Naoko</a>: a subset 
+of the <a href="http://sources.redhat.com/rhug/">rhug</a> packages 
 that have been repackaged for eventual inclusion in Red Hat Linux. 
 Naoko basically comprises binary RPMS of Ant, Tomcat, and their 
 dependencies built with gcj.
