Remove broken POOMA links.

--- a/htdocs/gcc-3.0/criteria.html
+++ b/htdocs/gcc-3.0/criteria.html
@@ -231,11 +231,10 @@ different programming languages.</p>
     <td>20.6</td>
     <td></td>
 </tr>
-<tr><td><a href="http://www.acl.lanl.gov/pooma/">POOMA</a></td>
+<tr><td>POOMA</td>
     <td>C++</td>
     <td>2.2.0</td>
-    <td><a href="http://www.acl.lanl.gov/distributions/pooma-2.3.0.tgz">
-        pooma-2.3.0.tgz</a></td>
+    <td>pooma-2.3.0.tgz</td>
 </tr>
 <tr><td><a href="http://www.netlib.org/lapack/index.html">LAPACK</a></td>
     <td>Fortran</td>
