Disable a 3.3.1 entry at submitter's request:   alphaev67-dec-osf5.1 (Tru64 5.1)

--- a/htdocs/gcc-3.3/buildstat.html
+++ b/htdocs/gcc-3.3/buildstat.html
@@ -86,6 +86,11 @@ Installing GCC: Final Installation</a>.</p>
 </td>
 </tr>
 
+<!--
+
+NOTE: the submitter reported that thread support is broken and asked
+      that this be disabled until he figures out why
+
 <tr>
 <td>alphaev67-dec-osf5.1</td>
 <td>Tru64 5.1</td>
@@ -93,6 +98,7 @@ Installing GCC: Final Installation</a>.</p>
 <a href="http://gcc.gnu.org/ml/gcc/2003-08/msg01161.html">3.3.1</a>
 </td>
 </tr>
+-->
 
 <tr>
 <td>alphaev68-dec-osf5.1</td>
