Update Gont link. By Michal Moskal <malekith@pld-linux.org>.

--- a/htdocs/frontends.html
+++ b/htdocs/frontends.html
@@ -59,7 +59,7 @@ of linking directly to the back end.</li>
 <li>The Ksi 
 language provides a thin interface to GCC trees with lispy syntax.
 It is meant as an intermediate language, used for example by the
-<a href="http://gont.pld.org.pl/">Gont</a> compiler.</li>
+<a href="http://www.kernel.pl/~malekith/gont/">Gont</a> compiler.</li>
 
 <li><a href="http://www.gnuprojects.org/flim/flim.htm">FLIM</a>, a Flexible
 Language for Integer Manipulation, can be used as a guideline in developing
