Remove broken reference to security-audit mailing list, for which I failed to find a proper replacement.

--- a/htdocs/projects/index.html
+++ b/htdocs/projects/index.html
@@ -199,11 +199,7 @@ on.</p>
 <h3><a name="improve_wconversion">Improve <code>-Wconversion</code></a></h3>
 <p>Improve <code>-Wconversion</code> so that it can be used for
 security auditing as well as for its original intended purpose of
-helping with converting old code to ISO C.  See a <a
-href="http://security-archive.merton.ox.ac.uk/security-audit-200012/0028.html">message
-to the security-audit list</a> discussing this.  The design for such
-an improved option or collection of options should be discussed with
-the gcc and security-audit lists.</p>
+helping with converting old code to ISO C.</p>
 
 <h3><a name="implement_various_builtin_functions_for_isoc99">Implement various builtin functions for ISO C99's 
 <code>&lt;tgmath.h&gt;</code></a></h3> 
