--- a/htdocs/testing/testing-pooma.html
+++ b/htdocs/testing/testing-pooma.html
@@ -8,7 +8,7 @@
 <h1>POOMA build and test guide</h1>
 
 <p>This page is a guide to building the
-<a href="http://www.acl.lanl.gov/pooma/">POOMA</a>
+<a href="http://www.codesourcery.com/pooma/pooma">POOMA</a>
 parallel object-oriented code and running its test programs.</p>
 
 <h2>Download and Extract</h2>
