Note contribution of new floating-point support code for ARM.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -89,6 +89,14 @@ to maintain and improve quality.</p>
 
 <dl>
 
+<dt><b>August 27, 2003</b></dt>
+<dd>
+Nicolas Pitre has contributed his hand-coded floating-point support code
+for ARM.  It is both significantly smaller and faster than the 
+existing C-based implementation.  The arm-elf configuration uses the new 
+code now, and other ports will follow.
+</dd>
+
 <dt><b>August 8, 2003</b></dt>
 <dd>
 <a href="gcc-3.3/">GCC 3.3.1</a> has been released.
