Mention addition of support for v850e1.

--- a/htdocs/gcc-3.4/changes.html
+++ b/htdocs/gcc-3.4/changes.html
@@ -225,7 +225,10 @@
 <h2>New Targets and Target Specific Improvements</h2>
 
   <ul>
-
+    <li>Support for the Mitsubishi V850E1 processor has been added.
+    This is a variant of the V850E processor with some additional
+    debugging instructions.  </li>
+    
     <li>Nicolas Pitre has contributed his hand-coded floating-point support
     code for ARM.  It is both significantly smaller and faster than the 
     existing C-based implementation, even when building applications for 
