* index.html: Add a news item.

--- a/htdocs/java/index.html
+++ b/htdocs/java/index.html
@@ -73,6 +73,15 @@ For <code>javax.crypto</code> support, we recommend the use of
 <!-- News entries start here -->
 
 <tr><td valign="top">
+<b>September 3, 2003</b>
+</td><td>
+Jeff Sturm has adapted Jan Hubicka's call graph optimization code to gcj.
+This code improves gcj's method inlining abilities with support for
+out-of-order methods and inter-class method calls, along with improved
+code size heuristics.  It is enabled by default when compiling at -O3.
+</td></tr>
+
+<tr><td valign="top">
 <b>August 4, 2003</b>
 </td><td>
 Gary Benson from Red Hat has released 
