Update my affiliation.

--- a/htdocs/steering.html
+++ b/htdocs/steering.html
@@ -40,7 +40,7 @@ reach them is the gcc <a href="lists.html">mailinglist</a>.</p>
 <li>Gerald Pfeifer (Centro di Ingegneria Economica e Sociale,
                     Università della Calabria)</li>
 <li>Joel Sherrill (OAR Corporation)</li>
-<li>Jim Wilson</li>
+<li>Jim Wilson (Specifix Inc)</li>
 </ul>
 
 <p><small>Membership in the steering committee is a personal membership.
