PRE is now enabled by default. Lift a tip off the curtain for the dominator opts.

--- a/htdocs/projects/tree-ssa/index.html
+++ b/htdocs/projects/tree-ssa/index.html
@@ -35,7 +35,7 @@ CPU2000</a>.</p>
 <li><a href="#ssa">SSA implementation</a></li>
 <li><a href="#unparse">Unparsing GENERIC trees</a></li>
 <li><a href="#tb">Tree Browser</a></li>
-<li><a href="#status">Implementation Status (last updated: 2003-06-11)</a></li>
+<li><a href="#status">Implementation Status (last updated: 2003-09-07)</a></li>
 <li><a href="#status">TODO list (last updated: 2003-06-11)</a></li>
 </ul>
 
@@ -273,13 +273,12 @@ infrastructure is in place.</p>
 <li>DCE (Dead Code Elimination)[<a href="#morgan-98">3</a>]</li>
 <li>PRE (Partial Redundancy Elimination)[<a href="#chow.ea-97">5</a>]
     with strength reduction</li>
+<li>Dominator-based optimizations such as constant propagation and
+    redundancy elimination using value numbering.
 </ul>
 
-<p>Copy propagation, CCP, and DCE are enabled by default at <code>-O1</code>
-and better.  In addition, some basic dominator-based optimizations can
-be enabled when writing into SSA form.  PRE is not yet enabled by default
-for any level optimization.  There still remain a few issues that have to
-be worked out before the compiler will bootstrap with PRE enabled.</p>
+<p>All passes are enabled by default at <code>-O1</code> and better.  The
+dominator-based optimizations are enabled when writing into SSA form.</p>
 
 <h3>Testing framework</h3>
 <p>Work on a framework for validation of the optimization passes has only
