Dummy dork forgets </li>

--- a/htdocs/projects/tree-ssa/index.html
+++ b/htdocs/projects/tree-ssa/index.html
@@ -274,7 +274,7 @@ infrastructure is in place.</p>
 <li>PRE (Partial Redundancy Elimination)[<a href="#chow.ea-97">5</a>]
     with strength reduction</li>
 <li>Dominator-based optimizations such as constant propagation and
-    redundancy elimination using value numbering.
+    redundancy elimination using value numbering.</li>
 </ul>
 
 <p>All passes are enabled by default at <code>-O1</code> and better.  The
