Mention removal of cast-as-lvalue extension

--- a/htdocs/gcc-3.4/changes.html
+++ b/htdocs/gcc-3.4/changes.html
@@ -200,6 +200,14 @@
         the declaration of <code>g</code> before the declaration of
 	<code>f</code>.  The default arguments for <code>g</code> must
 	be visible at the point where it is called.</p></li>
+
+    <li>The cast-as-lvalue extension has been removed.  In particular,
+        code like this:
+        <pre>
+        int i;
+        (char)a = 5;
+        </pre>
+        <p>is no longer accepted.</p></li>
   </ul>
 
 <h3>Objective-C</h3>
