--- a/htdocs/readings.html
+++ b/htdocs/readings.html
@@ -365,6 +365,13 @@ names.
 </ul>
 
 
+<h3>Objective-C Information</h3>
+
+<ul>
+  <li><a href="http://developer.apple.com/documentation/Cocoa/Conceptual/ObjectiveC/">
+      Objective-C Language Description</a> (Apple Computer)</li>
+</ul>
+
 
 <h3>Fortran information</h3>
 
