Drop checkbox and link for /testresults area.

--- a/htdocs/search.html
+++ b/htdocs/search.html
@@ -78,14 +78,10 @@ all regular web pages.
 <br />
 <input type="checkbox" name="restrict"
 value="g/a|g/b|g/c|g/d|g/e|g/f|g/g|g/h|g/i|g/j|g/l|g/mi|g/n|g/p|g/r|g/s|g/ti|g/th|g/w" />
-"Main" <a href="index.html">GCC</a>&nbsp;
+"Main" <a href="index.html">GCC</a>&nbsp;&nbsp;
 <input type="checkbox" name="restrict" value="g/o" />
 <a href="onlinedocs/">
-Documentation
-</a>&nbsp;
-<input type="checkbox" name="restrict" value="g/te" />
-<a href="http://gcc.gnu.org/testresults/">
-Test results</a>
+Documentation</a>
 <br />
 <p>
 <font size="-1">
