Note that further frontends are available a link to our Frontends page.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -13,7 +13,8 @@
 <p>GCC is the GNU Compiler Collection, which currently contains
 front ends for C, C++, Objective-C, Fortran,
 <a href="java/">Java</a>, and Ada, as well as libraries for these
-languages (<a href="libstdc++/">libstdc++</a>, libgcj,...).</p>
+languages (<a href="libstdc++/">libstdc++</a>, libgcj,...).
+<a href="frontends.html">Further frontends</a> are available.</p>
 
 <p>Major decisions about GCC are made by the <a href="steering.html">
 steering committee</a>, guided by the <a href="gccmission.html">
