Sun Sept 21 2003, Dorit Naishlos:
   * vectorization.html: New file.
   * index.html:Added reference to vectorization project.

--- a/htdocs/projects/tree-ssa/index.html
+++ b/htdocs/projects/tree-ssa/index.html
@@ -411,6 +411,9 @@ different passes are welcome.</p>
     <a href="http://icps.u-strasbg.fr/cgi-bin/temporal/temporal.cgi">
     translator</a>
     for Fortran.</dd>
+<dt><em><a href="vectorization.html">Vectorization</a></em></dt>
+<dd>This pass should vectorize certain loops, using classic data dependence
+    based approach.</dd>
 </dl>
 
 
