Rename "Timeline" to "GCC Timeline".

--- a/htdocs/releases.html
+++ b/htdocs/releases.html
@@ -23,7 +23,7 @@ page</a>.</p>
 <p>You can also retrieve the current development sources
 <a href="cvs.html">using CVS</a>.</p>
 
-<h2><a name="timeline">Timeline</a></h2>
+<h2><a name="timeline">GCC Timeline</a></h2>
 
 <p>Please refer to our <a href="develop.html#future">development plan</a>
 for future releases.</p>
