Replace the .jpg version of the logo by a .png version as provided by "Stephan T. Lavavej" <stl@caltech.edu>.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -6,7 +6,7 @@
 <set-var navigation>
 <body>
 
-<img src="gcc.jpg" alt="" align="right" />
+<img src="gcc.png" alt="" align="right" />
 
 <h1><small>Welcome to the GCC home page!</small></h1>
 
